# ClickClickMoney_AI

./: .gitignore  README.md  env.example.txt  pyproject.toml  명령어
core/: answer.py  backend_client.py  cache.py  compress.py  config.py  evidence.py  kiwoom_api.py  metrics.py  models.py  prompts.py  quant_guard.py  rag.py  router.py  tavily.py  utils.py
data/docs/: ai_response_style.md  anti_hallucination_policy.md  apptech_missions.md  budget_framework.md  context_budget_examples.md  evaluation_checklist.md  faq.md  guide.txt  ingest_mapping.md  invest_snapshot_light.md  korean_sentence_splitting.md  ledger_rules.md  live_tips.md  monthly_review_template.md  personas.md  points_optimization.md  routing_rules.md  saving_playbook_food.md  saving_principles.md  savings_cards_templates.md  seasonal_tips.md  security_privacy.md  subscriptions_audit.md  transport_saving.md  troubleshooting.md  url_safety_policy.md  weekly_report_template.md
data/mapping/: category_aliases.json
db/: schema.sql
docker/: Dockerfile.api  docker-compose.yml
evals/: bench_offline.py
faiss_index/: index.faiss  index.pkl
scripts/: build_index.py
server/: deps.py  main.py
server/routers/: chat.py  ingest.py  quiz.py  stock.py  tips.py
src/clickclickmoney/: ai_service.py  ai_service_exp.py  ai_service_tool.py
src/clickclickmoney_ai/: ai_service.py  config.py  database.py  main.py
src/clickclickmoney_ai/tools/: __init__.py  analysis.py  coaching.py  common.py
tests/: test_client.py  test_client_exp.py  test_client_tool.py
